Add example code