@@ -1,9 +1,9 @@
 package cn.tuyucheng.taketoday.rawtypes;
 
-import org.junit.jupiter.api.Test;
-
 import java.util.ArrayList;
 import java.util.List;
+
+import org.junit.Test;
 
 public class RawTypesUnitTest {
    @Test
@@ -12,6 +12,6 @@ public class RawTypesUnitTest {
       List myList = new ArrayList();
       myList.add(new Object());
       myList.add("2");
-      myList.add(new Integer(1));
+      myList.add(Integer.valueOf(1));
    }
 }
